# inzynieria-systemowa-projekt-zaliczeniowy

./: .gitignore  README.md  docker-compose.yaml  k8s_deployment.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 232e1239c7c3_added_todo_table.py
backend/app/: main.py
frontend/: Dockerfile  default.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AddToDoForm.vue  ToDoItem.vue
frontend/src/stores/: todo.ts
k8s/backend/: deployment.yaml  service.yaml
k8s/config/: cm.yaml  secrets.yaml
k8s/db/: deployment.yaml  storage.yaml
k8s/frontend/: deployment.yaml  service.yaml
