[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Inżynieria Systemowa - Projekt Zaliczeniowy"
authors = ["Ekajto <kac.rutkowski@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
starlite = "^1.48.1"
sqlalchemy = "^1.4.45"
alembic = "^1.9.1"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
aiosqlite = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
